--- a/main.tex
+++ b/main.tex
@@ -105,4 +105,70 @@ $M_{\rm extra}=\sum_n w_n (\hbar/c)\sqrt{\lambda_n}$. Nous prenons le mode $n=1$
 \paragraph{Reproductibilit\'e.}
 Le script \texttt{make\_figures.py} g\'en\`ere toutes les figures de cet article. Il s'appuie uniquement sur \texttt{numpy}/\texttt{matplotlib}.
 
+\section*{R\'ef\'erences}
+
+\begin{thebibliography}{10}
+
+\bibitem{brown_york_1993}
+J.~D. Brown and J.~W. York Jr.
+\newblock Quasilocal energy and conserved charges derived from the gravitational action.
+\newblock {\em Physical Review D}, 47(4):1407--1419, 1993.
+
+\bibitem{hawking_horowitz_1996}
+S.~W. Hawking and G.~T. Horowitz.
+\newblock The gravitational Hamiltonian, action, entropy and surface terms.
+\newblock {\em Classical and Quantum Gravity}, 13(6):1487--1498, 1996.
+
+\bibitem{szabados_2009}
+L.~B. Szabados.
+\newblock Quasi-local energy-momentum and angular momentum in general relativity.
+\newblock {\em Living Reviews in Relativity}, 12(1):4, 2009.
+
+\bibitem{weinberg_1972}
+S.~Weinberg.
+\newblock {\em Gravitation and Cosmology: Principles and Applications of the General Theory of Relativity}.
+\newblock John Wiley \& Sons, New York, 1972.
+
+\bibitem{misner_thorne_wheeler_1973}
+C.~W. Misner, K.~S. Thorne, and J.~A. Wheeler.
+\newblock {\em Gravitation}.
+\newblock W.~H. Freeman, San Francisco, 1973.
+
+\bibitem{wald_1984}
+R.~M. Wald.
+\newblock {\em General Relativity}.
+\newblock University of Chicago Press, Chicago, 1984.
+
+\bibitem{tolman_1939}
+R.~C. Tolman.
+\newblock Static solutions of Einstein's field equations for spheres of fluid.
+\newblock {\em Physical Review}, 55(4):364--373, 1939.
+
+\bibitem{oppenheimer_volkoff_1939}
+J.~R. Oppenheimer and G.~M. Volkoff.
+\newblock On massive neutron cores.
+\newblock {\em Physical Review}, 55(4):374--381, 1939.
+
+\bibitem{kerr_1963}
+R.~P. Kerr.
+\newblock Gravitational field of a spinning mass as an example of algebraically special metrics.
+\newblock {\em Physical Review Letters}, 11(5):237--238, 1963.
+
+\bibitem{boyer_lindquist_1967}
+R.~H. Boyer and R.~W. Lindquist.
+\newblock Maximal analytic extension of the Kerr metric.
+\newblock {\em Journal of Mathematical Physics}, 8(2):265--281, 1967.
+
+\bibitem{kaluza_1921}
+T.~Kaluza.
+\newblock Zum Unitätsproblem der Physik.
+\newblock {\em Sitzungsberichte der K\"oniglich Preußischen Akademie der Wissenschaften}, pages 966--972, 1921.
+
+\bibitem{klein_1926}
+O.~Klein.
+\newblock Quantentheorie und fünfdimensionale Relativitätstheorie.
+\newblock {\em Zeitschrift für Physik}, 37(12):895--906, 1926.
+
+\end{thebibliography}
+
 \end{document}
