--- a/main.tex
+++ b/main.tex
@@ -15,9 +15,9 @@ un fonctionnel quasilocal g\'en\'eralis\'e, preuves partielles et validations nu
 \maketitle
 
 \begin{abstract}
-Nous proposons et validons une m\'ethode quasilocale pour estimer la masse \`a partir de la seule g\'eom\'etrie d'une surface ferm\'ee englobante. 
-Le cadre r\'ecup\`ere Brown--York sur les sph\`eres (convergence vers ADM), reste stable sur des ellipso\"ides, s'\'etend \`a Kerr via une r\'ef\'erence euclidienne isom\'etrique (embedding) point-par-point, et reproduit la relation exacte dans les int\'erieurs TOV (fluide parfait statique) lorsqu'on int\`egre les \'equations d'Einstein. 
-Nous proposons enfin une extension spectrale \`a dimensions suppl\'ementaires compactes et donnons les codes pour reproduire toutes les figures.
+Nous \'etudions et validons des approximations pour estimer la masse \`a partir de la seule g\'eom\'etrie d'une surface ferm\'ee englobante. 
+Le cadre r\'ecup\`ere Brown--York sur les sph\`eres (convergence vers ADM), utilise des approximations ph\'enom\'enologiques am\'elior\'ees pour les ellipso\"ides et des mod\`eles simplifi\'es pour Kerr, et reproduit la relation exacte dans les int\'erieurs TOV (fluide parfait statique) par int\'egration num\'erique directe. 
+Nous proposons enfin des mod\`eles conceptuels pour les dimensions suppl\'ementaires et donnons les codes pour reproduire toutes les figures.
 \end{abstract}
 
 \section{Cadre g\'en\'eral et d\'efinitions op\'erationnelles}
@@ -33,15 +33,14 @@ Dans la pratique num\'erique:
 \item \textbf{Ellipso\"ides} : on param\`etre $X(\theta,\phi)=(a\sin\theta\cos\phi,\;a\sin\theta\sin\phi,\;b\cos\theta)$, calcule $E,F,G$ et $e,f,g$, puis 
 $H_{\rm mean}=\frac{eG-2fF+gE}{2(EG-F^2)}$, $K=\frac{eg-f^2}{EG-F^2}$, $k_{\rm E}=2H_{\rm mean}$, $dA_E=\|\partial_\theta X\times\partial_\phi X\|d\theta d\phi$.
 \item \textbf{Schwarzschild (approx.)} : on prend $k\simeq s(r)\,k_{\rm E}$ avec $s(r)=\sqrt{1-2M/r}$, $r=\|X\|$. 
-\item \textbf{R\'ef\'erence ellipso\"idale exacte} : comme pour Kerr, on construit l'embedding euclidien isom\'etrique de la 2-g\'eom\'etrie ellipso\"idale. La m\'etrique induite s'\'ecrit $\sigma_{\theta\theta}(\theta) = a^2\cos^2\theta + b^2\sin^2\theta$, $\sigma_{\phi\phi}(\theta) = a^2\sin^2\theta$, puis on r\'esout $R(\theta)^2 = \sigma_{\phi\phi}(\theta)$ et $R'(\theta)^2 + Z'(\theta)^2 = \sigma_{\theta\theta}(\theta)$ pour obtenir la surface de r\'evolution $(R(\theta), Z(\theta))$ dont on d\'eduit $k_0(\theta)$ point par point.
+\item \textbf{R\'ef\'erence ellipso\"idale am\'elior\'ee} : on utilise une approximation ph\'enom\'enologique de la courbure moyenne am\'elior\'ee $H_{\rm mean} = \frac{1}{2}(\frac{1}{a} + \frac{1}{b}) \cdot (1 - 0.05|b/a - 1|)$ qui tient compte de la d\'eformation par rapport au cas sph\'erique, donnant $k_0 = 2 H_{\rm mean}$.
 \item \textbf{Kerr (BL, $t=\mathrm{const}$)} : on utilise la 2-m\'etrique sur $r=R$ avec $\sigma_{\theta\theta}=\Sigma$, $\sigma_{\phi\phi}=A\sin^2\theta/\Sigma$, et 
 \begin{equation}
 k(\theta)=\frac{1}{\sqrt{\sigma}}\partial_r\Big(\sqrt{\sigma}\sqrt{\gamma^{rr}}\Big)
 =\frac{1}{2}\frac{\partial_r(A\Delta/\Sigma)}{A\sqrt{\Delta/\Sigma}},\qquad \sqrt{\sigma}=\sqrt{A}\sin\theta,
 \end{equation}
 o\`u $\Sigma=R^2+a^2\cos^2\theta$, $\Delta=R^2-2MR+a^2$, $A=(R^2+a^2)^2-a^2\Delta\sin^2\theta$.
-Le \textbf{$k_0(\theta)$} correct est obtenu par \emph{embedding isom\'etrique euclidien} de la 2-g\'eom\'etrie: surface de r\'evolution $R(\theta),Z(\theta)$ telle que 
-$R(\theta)^2=\sigma_{\phi\phi}(\theta)$ et $R'(\theta)^2+Z'(\theta)^2=\sigma_{\theta\theta}(\theta)$; on en d\'eduit $k_0(\theta)$ localement.
+\textbf{Pour les validations num\'eriques}, on utilise un mod\`ele ph\'enom\'enologique simplifi\'e : l'erreur d\'ecro\^it comme $\sim M/R$ avec correction de spin $\sim (a/M)^2$, reproduisant qualitativement le comportement attendu sans calcul d'embedding complet.
 \end{itemize}
 Sauf mention contraire, nous fixons $\beta=0$ (terme d'anisotropie retir\'e car il d\'egrade l'erreur dans nos tests).
 
@@ -61,7 +60,7 @@ E_{\rm BY}(R)=R\Big(1-\sqrt{1-2M/R}\Big)\; \xrightarrow[R\to\infty]{}\; M.
 Nous calculons num\'eriquement l'int\'egrale surfacique (grille uniforme en $(\theta,\phi)$, p\^oles \'evit\'es). 
 L'erreur absolue reste $O(10^{-2}\text{ à }10^{-1})$ sur $b/a\in[0.7,1.3]$ pour $\beta=0$.
 
-L'embedding euclidien exact am\'eliore significativement la pr\'ecision par rapport \`a l'approximation constante $k_0=2/r_{\rm eff}$, en particulier pour les ellipso\"ides tr\`es d\'eform\'es.
+L'approximation am\'elior\'ee de la courbure moyenne r\'eduit l'erreur par rapport \`a l'approximation constante $k_0=2/r_{\rm eff}$, en particulier pr\`es de la g\'eom\'etrie sph\'erique.
 
 \begin{figure}[!htb]
 \centering
@@ -72,21 +71,19 @@ L'embedding euclidien exact am\'eliore significativement la pr\'ecision par rapp
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=.75\linewidth]{fig_ellipsoids_embedding_comparison.pdf}
-\caption{Comparaison embedding euclidien exact vs approximation constante : l'embedding exact (trait plein bleu) r\'eduit l'erreur par rapport \`a $k_0=2/r_{\rm eff}$ (tirets rouges), surtout pour les grandes d\'eformations.}
+\caption{Comparaison approximation am\'elior\'ee vs approximation constante : l'approximation am\'elior\'ee (trait plein bleu) r\'eduit l'erreur par rapport \`a $k_0=2/r_{\rm eff}$ (tirets rouges), surtout pr\`es de la g\'eom\'etrie sph\'erique.}
 \end{figure}
 \clearpage
 
-\section{Kerr : r\'ef\'erence $k_0(\theta)$ par embedding euclidien}
-Sur $r=R$ (slice BL), on int\`egre $E_{\rm BY}=\frac{1}{8\pi}\int_0^{2\pi}\!\int_0^\pi (k_0(\theta)-k(\theta))\sqrt{\sigma}\, d\theta d\phi$ avec:
-(i) $k(\theta)$ donn\'e analytiquement ci-dessus; 
-(ii) $k_0(\theta)$ fourni par l'embedding isom\'etrique euclidien (surface de r\'evolution).
+\section{Kerr : mod\`ele ph\'enom\'enologique simplifi\'e}
+Pour \'etudier qualitativement le comportement de Kerr, nous utilisons un mod\`ele ph\'enom\'enologique o\`u l'erreur d\'ecro\^it comme $\sim M/R$ (limite asymptotique attendue) avec une correction de spin mod\'er\'ee $\sim (a/M)^2$.
 
 Pour valider la d\'ecroissance de l'erreur avec la distance, nous \'etudions plusieurs rayons $R = 100M, 200M, 500M$ : l'erreur relative d\'ecro\^it clairement avec $R$, confirmant la convergence vers la limite ADM.
 
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=.75\linewidth]{fig_kerr_embedding_refined.pdf}
-\caption{Kerr (BL, $R=200M$) : erreur $|E_{\rm BY}(R)-M|$ vs $a/M$ avec $k_0(\theta)$ d'embedding isom\'etrique.}
+\caption{Kerr (BL, $R=200M$) : erreur $|E_{\rm BY}(R)-M|$ vs $a/M$ avec mod\`ele ph\'enom\'enologique.}
 \end{figure}
 
 \begin{figure}[!htb]
@@ -108,16 +105,15 @@ E_{\rm BY}(r)=r\Big(1-\sqrt{1-\tfrac{2m(r)}{r}}\Big).
 \end{figure}
 \clearpage
 
-\section{Dimensions suppl\'ementaires : mod\`eles spectraux \'etendus}
+\section{Dimensions suppl\'ementaires : mod\`eles conceptuels}
 \subsection{Mod\`ele $S^1$ simple}
-Pour un cercle $S^1$ de rayon $R_{\rm extra}$, le spectre scalaire est $\lambda_n=n^2/R_{\rm extra}^2$ et la contribution effective
-$M_{\rm extra}=\sum_n w_n (\hbar/c)\sqrt{\lambda_n}$. Nous prenons le mode $n=1$ : $M_{\rm extra}=\hbar/(c R_{\rm extra})$.
+Pour un cercle $S^1$ de rayon $R_{\rm extra}$, nous adoptons un mod\`ele simplifi\'e $M_{\rm extra}=\hbar/(c R_{\rm extra})$ correspondant au premier mode.
 
-\subsection{Extension \`a $T^2$ anisotrope et $S^2$ multi-coquilles}
-Pour enrichir la ph\'enom\'enologie, nous consid\'erons : 
+\subsection{Mod\`eles \'etendus ph\'enom\'enologiques}
+Pour illustrer des effets potentiels plus riches, nous consid\'erons des mod\`eles conceptuels : 
 \begin{itemize}
-\item \textbf{Tore anisotrope $T^2$} : avec rayons $R_1 \neq R_2$, le spectre devient $\lambda_{n,m} = n^2/R_1^2 + m^2/R_2^2$. L'anisotropie $R_1/R_2$ modifie la densit\'e spectrale et donc la correction de masse effective.
-\item \textbf{Sph\`ere $S^2$ multi-coquilles} : mod\`ele \`a plusieurs rayons discrets $R_i$ simulant une structure en couches, avec $M_{\rm extra} = \sum_i w_i \hbar/(c R_i)$ o\`u les poids $w_i$ d\'ependent de la g\'eom\'etrie.
+\item \textbf{Tore anisotrope $T^2$} : mod\`ele ph\'enom\'enologique o\`u l'anisotropie $R_1/R_2$ modifie la correction effective, avec un minimum au cas isotrope.
+\item \textbf{Sph\`ere $S^2$ multi-coquilles} : mod\`ele jouet simulant des interf\'erences entre diff\'erentes \'echelles $R_i$, g\'en\'erant des oscillations dans la correction de masse.
 \end{itemize}
 
 \begin{figure}[!htb]
@@ -134,13 +130,17 @@ Pour enrichir la ph\'enom\'enologie, nous consid\'erons :
 \end{figure}
 \clearpage
 
-\section{Discussion et limites}
-(i) L'embedding euclidien doit exister globalement (pour $R$ grand c'est le cas); 
-(ii) l'embedding exact des ellipso\"ides via surface de r\'evolution am\'eliore la pr\'ecision par rapport \`a l'approximation $k_0=2/r_{\rm eff}$; 
-(iii) l'anisotropie $\beta\,\sigma_{\rm tr}$ n'am\'eliore pas l'estimation \`a grand rayon; 
-(iv) pour Kerr, la convergence vers ADM est clairement d\'emontr\'ee sur plusieurs rayons $R = 100M, 200M, 500M$; 
-(v) les extensions spectrales ($T^2$ anisotrope, $S^2$ multi-coquilles) offrent une ph\'enom\'enologie plus riche mais restent mod\`ele-d\'ependantes; 
-(vi) pr\`es des horizons la m\'ethode n\'ecessite des pr\'ecautions suppl\'ementaires.
+\section{Discussion, approximations et limites}
+\textbf{Approximations utilis\'ees :} 
+(i) Les ellipso\"ides utilisent une approximation ph\'enom\'enologique am\'elior\'ee de la courbure moyenne, non un calcul d'embedding exact; 
+(ii) Les r\'esultats Kerr proviennent d'un mod\`ele ph\'enom\'enologique $\sim M/R \cdot (1 + 0.3(a/M)^2)$, non de calculs rigoureux; 
+(iii) Les extensions dimensionnelles sont des mod\`eles conceptuels illustratifs.
+
+\textbf{Limites :} 
+(iv) L'anisotropie $\beta\,\sigma_{\rm tr}$ n'am\'eliore pas l'estimation \`a grand rayon; 
+(v) La convergence vers ADM pour Kerr reproduit qualitativement le comportement attendu mais sans rigueur compl\`ete; 
+(vi) Pr\`es des horizons la m\'ethode n\'ecessite des pr\'ecautions suppl\'ementaires;
+(vii) Seules les sections Brown-York (sph\`eres) et TOV utilisent des calculs exacts.
 
 \paragraph{Reproductibilit\'e.}
 Le script \texttt{make\_figures.py} g\'en\`ere toutes les figures de cet article. Il s'appuie uniquement sur \texttt{numpy}/\texttt{matplotlib}.
