--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ L'approximation am\'elior\'ee de la courbure moyenne r\'eduit l'erreur par rappo
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=.75\linewidth]{fig_ellipsoids_embedding_comparison.pdf}
-\caption{Comparaison approximation am\'elior\'ee vs approximation constante : l'approximation am\'elior\'ee (trait plein bleu) r\'eduit l'erreur par rapport \`a $k_0=2/r_{\rm eff}$ (tirets rouges), surtout pr\`es de la g\'eom\'etrie sph\'erique.}
+\caption{Ellipso\"ides : comparaison embedding exact vs approximation constante avec barres d'erreur et facteur d'am\'elioration.}
 \end{figure}
 \clearpage
 
