--- a/main.tex
+++ b/main.tex
@@ -211,4 +211,20 @@ O.~Klein.
 
 \end{thebibliography}
 
+% AUTO-FIGURES BEGIN (generated on 2025-08-21 13:51)
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=\linewidth]{{fig_astrophysical_validation.pdf}}
+  \caption{{Astrophysical validation.}}
+  \label{{fig:fig_astrophysical_validation}}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=\linewidth]{{fig_theoretical_comparison.pdf}}
+  \caption{{Theoretical comparison.}}
+  \label{{fig:fig_theoretical_comparison}}
+\end{figure}
+% AUTO-FIGURES END
+
 \end{document}
